--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": false,
   "version": "1.0.0",
   "type": "module",
-  "description": "A lightweight, production-ready React SVG icon library with 100+ pre-built icons.",
+  "description": "A lightweight, production-ready React SVG icon library with 300+ pre-built icons.",
   "keywords": [
     "icons",
     "react",
@@ -12,15 +12,14 @@
     "library",
     "ui"
   ],
-  "author": "",
+  "author": "Michael Scharff",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "https://github.com/Minka1902/msr-icons.git"
   },
-  "homepage": "",
   "bugs": {
-    "url": ""
+    "url": "https://github.com/Minka1902/msr-icons/issues"
   },
   "scripts": {
     "dev": "vite",
